--- a/templates/info_center.html
+++ b/templates/info_center.html
@@ -25,13 +25,10 @@
         </div>
 
         <div>
-          <a href="/map">
-            READ MORE 
-            <img src="/static/img/right-arrow-icon.svg" alt="Icon" class="right-arrow-icon" />
-          </a>
+          <a href="/map">READ MORE ➞</a>
         </div>
-        
       </div>
+
       <div class="menu">
         <button class="menu-button active" onclick="showContent('news')">NEWS</button>
         <button class="menu-button" onclick="showContent('events')">EVENTS</button>
@@ -46,5 +43,4 @@
       <div class="content" id="updates" style="display: none;">This is the UPDATES content.</div>
     </div>
   </main>
-  
 {% endblock %}
