--- a/templates/map.html
+++ b/templates/map.html
@@ -18,7 +18,28 @@
           <h1 class="title">The Quest</h1>
         </div>
         <div class="cta-button-container">
-          <a href="/info_center"><img src="static/img/button-default.svg" alt="GET THE QUEST" class="cta-button"></a>
+          <button class="get-the-quest get">OUR SOCIALS</button>
+          <div id="overlaytwo" style="display: none;">
+            <div id="content-block">
+              <button type="button" id="close-block"><img src="/static/img/icon-close.png" alt="Close Button" /></button>
+              
+              <div id="main-text">
+                  <p>SOON...</p>
+              </div>
+              
+              <div id="chill-man">
+                <img src="/static/img/chill-man.png" alt="Chill Man">
+              </div>
+
+              <div id="description">
+                <p>The game <strong>"The Quest"</strong> is still in development.<br>Subscribe to our social networks to follow the<br>news.</p>
+              </div>
+
+              <div id="loading">
+                <img src="/static/img/line.png" alt="Loading">
+              </div>
+            </div>
+          </div>
         </div>
     </div>
     
@@ -26,13 +47,13 @@
 
   <div class="privacy-policy">
     <div class="fixed-text-block">
-      <p class="first-text">The Quest - it just a game.</p>
-      <p class="second-text">For investment inquiries, <a href="/map">please reach</a> out to us.</p>
+      <p class="first-text">The Quest - it's just a game.</p>
+      <p class="second-text">For investment inquiries, <a href="/map">please reach out</a> to us.</p>
     </div>
 
     <div class="privacy-block">
-      <a href="#">Jobs opening</a>
-      <a href="#">Privacy and Policy</a>
+      <a href="#">Job openings</a>
+      <a href="#">Privacy Policy</a>
     </div>
   </div>
 {% endblock %}
