--- a/static/css/style.css
+++ b/static/css/style.css
@@ -200,7 +200,7 @@ main {
     border-radius: 10px;
 }
 
-#overlaytwo #close-block {
+#overlaytwo #close-block-two {
     position: absolute;
     top: 20px; 
     right: 20px; 
