--- a/templates/map.html
+++ b/templates/map.html
@@ -21,7 +21,7 @@
           <button class="get-the-quest get">OUR SOCIALS</button>
           <div id="overlaytwo" style="display: none;">
             <div id="content-block">
-              <button type="button" id="close-block"><img src="/static/img/icon-close.png" alt="Close Button" /></button>
+              <button type="button" id="close-block-two"><img src="/static/img/icon-close.png" alt="Close Button" /></button>
               
               <div id="main-text">
                   <p>SOON...</p>
