--- a/templates/map.html
+++ b/templates/map.html
@@ -18,7 +18,7 @@
           <h1 class="title">The Quest</h1>
         </div>
         <div class="cta-button-container">
-          <button class="get-the-quest get">OUR SOCIALS</button>
+          <button class="get-the-quest get"></button>
           <div id="overlaytwo" style="display: none;">
             <div id="content-block">
               <button type="button" id="close-block-two"><img src="/static/img/icon-close.png" alt="Close Button" /></button>
