--- a/templates/map.html
+++ b/templates/map.html
@@ -32,12 +32,14 @@
               </div>
 
               <div id="description">
-                <p>The game <strong>"The Quest"</strong> is still in development.<br>Subscribe to our social networks to follow the<br>news.</p>
+                <p><b>The game <strong>"The Quest"</strong> is still in development.</b><br>Subscribe to our social networks to follow the news.<br></p>
               </div>
 
               <div id="loading">
-                <img src="/static/img/line.png" alt="Loading">
-              </div>
+                <div class="progress-bar">
+                  <div class="progress" id="progress"></div>
+                </div>
+              </div>              
             </div>
           </div>
         </div>
