--- a/templates/template.html
+++ b/templates/template.html
@@ -54,11 +54,11 @@
                     </div>
                     
                     <div id="socials">
-                        <a href="/map"><img src="/static/img/social-tt.png" alt="The Quest Logo"></a>
-                        <a href="/map"><img src="/static/img/social-tg.png" alt="The Quest Logo"></a>
-                        <a href="/map"><img src="/static/img/social-inst.png" alt="The Quest Logo"></a>
-                        <a href="/map"><img src="/static/img/social-ds.png" alt="The Quest Logo"></a>
-                        <a href="/map"><img src="/static/img/social-x.png" alt="The Quest Logo"></a>
+                        <a href="/map"><img src="/static/img/social-tt.svg" alt="The Quest Tiktok"></a>
+                        <a href="/map"><img src="/static/img/social-tg.svg" alt="The Quest Telegram"></a>
+                        <a href="/map"><img src="/static/img/social-ig.svg" alt="The Quest Instagram"></a>
+                        <a href="/map"><img src="/static/img/social-ds.svg" alt="The Quest Discord"></a>
+                        <a href="/map"><img src="/static/img/social-x.svg" alt="The Quest X"></a>
                     </div>
 
                     <div id="contact">
