--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,23 +1,8 @@
-.blinking-text {
-    display: inline-block;
-    font-size: 2em;
-    font-weight: bold;
+body, html {
+    background: url(/static/img/bg.png);
+    margin: 0;
+    padding: 0;
+    height: 100vh; /* Высота экрана */
+    overflow-x: hidden; /* Убираем горизонтальный скролл */
+    font-family: 'Chakra Petch', sans-serif;
 }
-
-/* Анимация мигания */
-@keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0; }
-}
-
-.blinking-text span {
-    display: inline-block;
-    animation: blink 0.5s infinite; /* Анимация мигания */
-}
-
-/* Задержка анимации для каждой буквы */
-.blinking-text span:nth-child(1) { animation-delay: 0s; }
-.blinking-text span:nth-child(3) { animation-delay: 0.2s; }
-.blinking-text span:nth-child(4) { animation-delay: 0.3s; }
-.blinking-text span:nth-child(2) { animation-delay: 0.1s; }
-.blinking-text span:nth-child(5) { animation-delay: 0.4s; }
