--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,6 +239,13 @@ main {
 
 #overlaytwo #description p{
     font-size: 18px;
+    color: #747474;
+}
+
+#overlaytwo #description b{
+    font-size: 18px;
+    color: #ffffff;
+    line-height: 35px;
 }
 
 #overlaytwo #description strong{
@@ -248,3 +255,28 @@ main {
 #overlaytwo #chill-man {
     margin-bottom: 35px;
 }
+
+#loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.progress-bar {
+    width: 420px; /* Ширина прогресс-бара */
+    height: 4px; /* Высота прогресс-бара */
+    background-color: transparent; /* Цвет фона */
+    border: 1px solid #FFCE00; /* Рамка */
+    overflow: hidden; /* Скрываем содержимое за границей */
+    position: relative;
+    padding:5px 8px 5px 8px;
+}
+
+.progress {
+    width: 1%; /* Начальная ширина заполнения */
+    height: 100%;
+    background-color: #FFCE00; /* Цвет заполнения */
+    transition: width 0.3s ease; /* Анимация плавного заполнения */
+}
+
