--- a/templates/template.html
+++ b/templates/template.html
@@ -54,11 +54,13 @@
                     </div>
                     
                     <div id="socials">
-                        <a href="/map"><img src="/static/img/social-tt.png" alt="The Quest Tiktok"></a>
-                        <a href="/map"><img src="/static/img/social-tg.png" alt="The Quest Telegram"></a>
-                        <a href="/map"><img src="/static/img/social-ig.png" alt="The Quest Instagram"></a>
-                        <a href="/map"><img src="/static/img/social-ds.png" alt="The Quest Discord"></a>
-                        <a href="/map"><img src="/static/img/social-x.png" alt="The Quest X"></a>
+                        <div id="socials">
+                            <a href="/map"><img class="social-tt" src="/static/img/social-tt.png" alt="The Quest Tiktok"></a>
+                            <a href="/map"><img class="social-tg" src="/static/img/social-tg.png" alt="The Quest Telegram"></a>
+                            <a href="/map"><img class="social-inst" src="/static/img/social-inst.png" alt="The Quest Instagram"></a>
+                            <a href="/map"><img class="social-ds" src="/static/img/social-ds.png" alt="The Quest Discord"></a>
+                            <a href="/map"><img class="social-x" src="/static/img/social-x.png" alt="The Quest X"></a>
+                        </div>
                     </div>
 
                     <div id="contact">
