--- a/templates/template.html
+++ b/templates/template.html
@@ -50,18 +50,34 @@
                 
                 <div id="block">
                     <div id="main-text">
-                        <p>OUR SOCIALS</p>
+                        <p>Our Socials</p>
                     </div>
                     
                     <div id="socials">
-                        <div id="socials">
-                            <a href="/map"><img class="social-tt" src="/static/img/social-tt.png" alt="The Quest Tiktok"></a>
-                            <a href="/map"><img class="social-tg" src="/static/img/social-tg.png" alt="The Quest Telegram"></a>
-                            <a href="/map"><img class="social-inst" src="/static/img/social-inst.png" alt="The Quest Instagram"></a>
-                            <a href="/map"><img class="social-ds" src="/static/img/social-ds.png" alt="The Quest Discord"></a>
-                            <a href="/map"><img class="social-x" src="/static/img/social-x.png" alt="The Quest X"></a>
-                        </div>
+                        <a href="/map" class="social-item">
+                            <img class="social-img normal" src="/static/img/social-tt.png" alt="The Quest Tiktok">
+                            <img class="social-img hover" src="/static/img/social-tt-hover.png" alt="The Quest Tiktok Hover">
+                        </a>
+                        <a href="/map" class="social-item">
+                            <img class="social-img normal" src="/static/img/social-tg.png" alt="The Quest Telegram">
+                            <img class="social-img hover" src="/static/img/social-tg-hover.png" alt="The Quest Telegram Hover">
+                        </a>
+                        <a href="/map" class="social-item">
+                            <img class="social-img normal" src="/static/img/social-inst.png" alt="The Quest Instagram">
+                            <img class="social-img hover" src="/static/img/social-inst-hover.png" alt="The Quest Instagram Hover">
+                        </a>
+                        <a href="/map" class="social-item">
+                            <img class="social-img normal" src="/static/img/social-ds.png" alt="The Quest Discord">
+                            <img class="social-img hover" src="/static/img/social-ds-hover.png" alt="The Quest Discord Hover">
+                        </a>
+                        <a href="/map" class="social-item">
+                            <img class="social-img normal" src="/static/img/social-x.png" alt="The Quest X">
+                            <img class="social-img hover" src="/static/img/social-x-hover.png" alt="The Quest X Hover">
+                        </a>
                     </div>
+                    
+                    
+                    
 
                     <div id="contact">
                         <hr id="line">
