--- a/templates/info_center.html
+++ b/templates/info_center.html
@@ -31,17 +31,18 @@
       </div>
 
       <div class="menu">
-        <button class="menu-button active" onclick="showContent('news')">NEWS</button>
-        <button class="menu-button" onclick="showContent('events')">EVENTS</button>
-        <button class="menu-button" onclick="showContent('updates')">UPDATES</button>
+        <button class="menu-button" data-section="news">NEWS</button>
+        <button class="menu-button" data-section="events">EVENTS</button>
+        <button class="menu-button" data-section="updates">UPDATES</button>
       </div>
+    
 
     </div>
     <div class="news-events-updates">
       <div class="content" id="news">This is the NEWS content.</div>
-      <div class="content" id="news">This is the NEWS content.</div>
       <div class="content" id="events" style="display: none;">This is the EVENTS content.</div>
       <div class="content" id="updates" style="display: none;">This is the UPDATES content.</div>
-    </div>
+  </div>
+  <script src="{{ url_for('static', filename='js/info_center.js') }}"></script>
   {% endblock %}
 </main>
