--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -31,12 +31,14 @@ body, html {
     width: 140px;
     height: 31px;
     border: 1px solid #FFCE00;
+    background-color: rgb(255, 206, 0 , 15%);
     margin-bottom: 20px;
     color: #FFCE00;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 15px;
+    border-radius: 5px;
 }
 
 .main-content h1 {
