--- a/templates/template.html
+++ b/templates/template.html
@@ -54,23 +54,24 @@
                     </div>
                     
                     <div id="socials">
-                        <a href="/map" class="social-item">
+                        <a href="https://www.twitch.tv/" class="social-item" target="_blank">
                             <img class="social-img normal" src="/static/img/social-tt.png" alt="The Quest Tiktok">
                             <img class="social-img hover" src="/static/img/social-tt-hover.png" alt="The Quest Tiktok Hover">
                         </a>
-                        <a href="/map" class="social-item">
+                        
+                        <a href="/map" class="social-item" target="_blank">
                             <img class="social-img normal" src="/static/img/social-tg.png" alt="The Quest Telegram">
                             <img class="social-img hover" src="/static/img/social-tg-hover.png" alt="The Quest Telegram Hover">
                         </a>
-                        <a href="/map" class="social-item">
+                        <a href="/map" class="social-item" target="_blank">
                             <img class="social-img normal" src="/static/img/social-inst.png" alt="The Quest Instagram">
                             <img class="social-img hover" src="/static/img/social-inst-hover.png" alt="The Quest Instagram Hover">
                         </a>
-                        <a href="/map" class="social-item">
+                        <a href="/map" class="social-item" target="_blank">
                             <img class="social-img normal" src="/static/img/social-ds.png" alt="The Quest Discord">
                             <img class="social-img hover" src="/static/img/social-ds-hover.png" alt="The Quest Discord Hover">
                         </a>
-                        <a href="/map" class="social-item">
+                        <a href="/map" class="social-item" target="_blank">
                             <img class="social-img normal" src="/static/img/social-x.png" alt="The Quest X">
                             <img class="social-img hover" src="/static/img/social-x-hover.png" alt="The Quest X Hover">
                         </a>
@@ -104,7 +105,7 @@
                 alt="InfoCenter" 
                 class="nav-icon">
         </a>
-        <a href="/map" class="nav-link {% if active_page == 'map' %}active{% else %}inactive{% endif %}">
+        <a href="/map" class="map-icon nav-link {% if active_page == 'map' %}active{% else %}inactive{% endif %}">
             <img 
                 src="{% if active_page == 'map' %}static/img/map-icon-active.svg{% else %}static/img/map-icon.svg{% endif %}" 
                 alt="Map" 
