--- a/templates/map.html
+++ b/templates/map.html
@@ -31,7 +31,7 @@
   
               <!-- Основной текст -->
               <div id="main-text">
-                  <p>SOON...</p>
+                  <p>COMING SOON . . .</p>
               </div>
   
               <!-- Изображение -->
@@ -43,7 +43,7 @@
               <div id="description">
                   <p>
                       <b>The game <strong>"The Quest"</strong> is still in development.</b><br>
-                      Subscribe to our social networks to follow the news.<br>
+                      Subscribe to our <a href="/error_page">social networks</a> to follow the news.<br>
                   </p>
               </div>
   
